package com.deloitte.training.oodesignpatterns.behavioral.observer;

public interface Observer {
	
	void update();
        
}