package com.deloitte.training.oodesignpatterns.behavioral.observer;

public interface Subject {

    void register(Observer observer);

    void unregister(Observer observer);

    void notifyObservers();

    Object getMessage(Observer observer);

}
